assets/css/styles.css
/* ... */
.button-wrapper .button:after {
	content: "";
	position: absolute;
	width: 279px;
	height: 10px;
	bottom: -10px;
	left: -5px;
	transform: skew(-45deg) rotate(0deg);
	border-bottom: 2px solid #fff;
	border-right: 2px solid #fff;
}

.button-wrapper .button.retro-btn-left::before {
	border-right: transparent;
	border-bottom: transparent;
	right: -30px;
	transform: rotate(90deg) skew(-45deg);
	left: auto;
	bottom: 2px;
	height: 16px;
	z-index: 2;
	border-left: 2px solid;
	border-top: 2px solid;
}

.button-wrapper .button.black-border::before {
	border-color: #000;
}

.button-wrapper .button.retro-btn-left:after {
	content: "";
	border-bottom: 2px solid;
	border-left: 2px solid;
	position: absolute;
	width: 279px;
	height: 17px;
	bottom: -18px;
	left: 6px;
	transform: skew(45deg) rotate(0deg);
	border-top: transparent;
	border-right: transparent;
}

.button-wrapper .button.black-border:after {
	border-color: #000;
}

.button-wrapper .button.clicked {
	left: -5px;
	bottom: -5px;
}

.button-wrapper .button.clicked:before {
	height: 5px;
	left: -22px;
	bottom: 15px;
}

.button-wrapper .button.clicked:after {
	height: 5px;
	bottom: -5px;
	left: -2px;
}

.btn-plus {
	display: inline-block;
	height: 45px;
	width: 45px;
	border-radius: 50%;
	background: var(--blue);
	box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.15);
	text-align: center;
	font-size: 14px;
	color: #fff;
	padding: 13px;
}

.btn-plus:hover {
	background: var(--yellow);
}

.read-more.plus-btn:hover {
	color: var(--yellow);
}

.read-more.plus-btn:hover span.btn-plus {
	background-color: var(--yellow);
	color: #101010;
}

.round-btn {
	display: inline-block;
	height: 39px;
	width: 39px;
	border-radius: 50%;
	box-shadow: 0px 2px 6px rgba(41, 41, 41, 0.18);
	padding: 12px;
}

.round-btn.blue {
	background: var(--blue);
}

.round-btn.bookmark {
	padding: 11px 14px;
}

input+button,
input+input[type="button"],
input+input[type="submit"] {
	padding: 0;
}

/*RIGHT 3D BTN*/
.button-wrapper .button.retro-btn-left.clicked {
	left: 8px;
	bottom: -9px;
}

.button-wrapper .button.retro-btn-left.clicked:before {
	height: 7px;
	bottom: 11px;
	left: auto;
	right: -26px;
}

.button-wrapper .button.retro-btn-left.clicked:after {
	height: 8px;
	bottom: -9px;
	left: 2px;
}

.retro-blue {
	color: #fff !important;
	background-color: #4B5FF7 !important;
}

/*QUOTE*/
.quote-top {
	transform: skew(-38deg);
	height: 28px;
	border: 2px solid #020201;
	border-bottom: none;
}

.quote-top:before {
	content: "";
	display: inline-block;
	width: 170px;
	height: 15px;
	margin-right: 0;
	background-color: var(--yellow);
	margin: 0 auto;
	margin-left: auto;
	margin-left: calc(50% - 85px);
	transform: translateY(-10px) skew(38deg);
}

.quote-bottom {
	transform: skew(142.51deg);
	height: 28px;
	border: 2px solid #020201;
	border-bottom: none;
}

.quote-text {
	font-family: Abhaya Libre;
	font-style: normal;
	font-weight: normal;
	line-height: 50px;
	font-size: 35px;
	color: #000;
	padding: 28px 113px;
}

.quote-author {
	font-weight: 500;
	line-height: 30px;
	font-size: 16px;
	color: #010203;
	margin-bottom: 42px;
	text-align: center;
}

/*SEPARATOR*/
.separator {
	position: relative;
}

.separator .btn {
	white-space: normal;
}

.separator p {
	margin-top: 8px;
}

.separator .line {
	border-top: 2px solid #000;
	box-sizing: border-box;
	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
	-webkit-box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
	-moz-box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
	transform: translateY(33px);
}

.button-container {
	text-align: center;
}

.separator .btn,
.separator-left .btn {
	font-weight: bold;
	letter-spacing: 1px;
	font-family: Raleway;
	font-style: normal;
	font-weight: 900;
	font-size: 30px;
}

.separator--education {
	transform: translateY(-33px);
}

/* Footer menu */

.footer .menu {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
}

/* overlay footer */

.overlay-footer {
	position: fixed;
	bottom: 0;
	height: 154px;
	width: 100%;
	background: #000;
}

.overlay-footer {
	color: #fff;
}

.social-links {
	position: relative;
}

.overlay-footer .logo-spaces {
	flex: 1;
	text-align: right;
}

.social-links li a {
	background-repeat: no-repeat;
	float: left;
	padding: 30px;
	margin-top: 68px;
}

.address-footer-menu li {
	float: left;
	padding-right: 39px;
	margin-top: 28px;
}

.address-footer-menu li:last-child {
	padding-right: 0;
}

.address-footer-menu h1 {
	font-family: Raleway;
	font-style: normal;
	font-weight: 900;
	line-height: 12px;
	font-size: 14px;
	margin-bottom: 20px;
}

.address-footer-menu p {
	font-family: Raleway;
	font-style: normal;
	font-weight: normal;
	line-height: 12px;
	font-size: 14px;
	margin-bottom: 8px;
}

/*HOME*/
.slick-nav {
	display: flex;
	justify-content: center;
	top: 45%;
}

.slick-dots {
	right: 40px;
}

.slick-dots,
.slick-dots li {
	display: flex;
	flex-direction: column;
	align-items: flex-end;
	justify-content: center;
}

.slick-dots li button.black-dots::before,
.slick-dots li.slick-active button.black-dots::before,
.slick-dots li.slick-active button.black-dots::after {
	content: none;
}

.slick-dots li button.black-dots {
	width: 8px;
	height: 8px;
	border-radius: 8px;
}

.slick-dots li button {
	border: 1px solid #fff;
	padding: 3px;
}

.slick-dots li.slick-active button.black-dots {
	background: #fff;
}

.home-slider-container {
	color: #fff;
	padding-top: 125px;
}

.home-slider-container>.container {
	position: relative;
}

.home-slider-container .slick-nav {
	position: absolute;
	left: -6%;
}

.home-slider-container .button-wrapper {
	margin-left: 11px;
	margin-bottom: 10px;
}

.home-slider-left {
	padding-top: 40px;
}

.home-slider h1 {
	letter-spacing: 0.7px;
	padding: 0;
	line-height: 72px;
	margin-bottom: 35px;
	font-size: 55px;
}

.home-slider .sup-title {
	font-weight: 500;
	font-size: 15px;
	margin-bottom: 12px;
	text-transform: uppercase;
	color: #fff;
	border-bottom: 2px solid #fff;
	text-align: left;
	display: inline-block;
	opacity: 0.9;
}
/* ... */

